--- a/assignment-2a/website-content/webpages-list.html
+++ b/assignment-2a/website-content/webpages-list.html
@@ -1,1 +1,107 @@
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta charset="UTF-8" />
 
+    <title></title>
+  </head>
+
+  <body><p></p><table border="1">
+
+      <tr>
+        <td>Home.html</td>
+        <td>Salsa Swings Dance Studio</td>
+        <td>landing page of the website</td>
+        <td>Overview of the studio(s), links to the detail pages</td>
+      </tr>
+	  
+	  <tr>
+        <td>About us.html</td>
+        <td>The School</td>
+        <td>Page containing information about the school</td>
+        <td>Contact us-button, which opens a dialogue containing a mail-address(mailto:) and phone number for registration</td>
+      </tr>
+	  
+	  <tr>
+        <td>Pricing.html</td>
+        <td>Pricing</td>
+        <td>Overview of the pricing for participation in courses</td>
+		<td>Contact us-button, which opens a dialogue containing a mail-address(mailto:) and phone number for registration</td>
+      </tr>
+	  
+	  <tr>
+        <td>Team.html</td>
+        <td>Our Team</td>
+        <td>A list with short profile of every dance-teacher (including name, dance-types, trophys) </td>
+        <td>Contact us-button, which opens a dialogue containing a mail-address(mailto:) and phone number for registration</td>
+      </tr>
+	    
+	  <tr>
+        <td>CourseOverview.html</td>
+        <td>Dance-Courses</td>
+        <td>Shows all the offered courses and links to them</td>
+        <td>Linking to the different courses</td>
+      </tr>
+	  
+	  <tr>
+        <td>Salsa.html</td>
+        <td>Salsa</td>
+        <td>Detailpage for Salsa-Course. Contains Time, Teacher, Information and requirenments for the student</td>
+        <td>Contact us-button, which opens a dialogue containing a mail-address(mailto:) and phone number for registration / Videoplayer containing Videos of the dance</td>
+      </tr>
+	  
+	  <tr>
+        <td>IrishDance.html</td>
+        <td>Irish Dance</td>
+        <td>Detailpage for IrishDance-Course. Contains Time, Teacher, Information and requirenments for the student</td>
+        <td>Contact us-button, which opens a dialogue containing a mail-address(mailto:) and phone number for registration / Videoplayer containing Videos of the dance</td>
+      </tr>
+	  
+	  <tr>
+        <td>HipHop.html</td>
+        <td>Hip Hop</td>
+        <td>Detailpage for Hip Hop-Course. Contains Time, Teacher, Information and requirenments for the student</td>
+        <td>Contact us-button, which opens a dialogue containing a mail-address(mailto:) and phone number for registration / Videoplayer containing Videos of the dance</td>
+      </tr>
+	  
+	  <tr>
+        <td>Swing.html</td>
+        <td>Swing</td>
+        <td>Detailpage for Swing-Course. Contains Time, Teacher, Information and requirenments for the student</td>
+        <td>Contact us-button, which opens a dialogue containing a mail-address(mailto:) and phone number for registration / Videoplayer containing Videos of the dance</td>
+      </tr>
+	  
+	  <tr>
+        <td>Charleston.html</td>
+        <td>Charleston</td>
+        <td>Detailpage for Charleston-Course. Contains Time, Teacher, Information and requirenments for the student</td>
+        <td>Contact us-button, which opens a dialogue containing a mail-address(mailto:) and phone number for registration / Videoplayer containing Videos of the dance</td>
+      </tr>
+	  
+	  <tr>
+        <td>Gallery.html</td>
+        <td>Gallery</td>
+        <td>A gallery page containing images of dancers from the school</td>
+        <td>/</td>
+      </tr>
+	  
+	  <tr>
+        <td>Reviews.html</td>
+        <td>Reviews</td>
+        <td>A page displaying the reviews of the costumers</td>
+        <td>Reviews are added by the administrator, no form</td>
+      </tr>
+	  
+	  <tr>
+        <td>Imprint.html</td>
+        <td>Imprint & Privacy</td>
+        <td>The Imprint and Privacy-Policy for the page</td>
+        <td>/</td>
+      </tr>
+	  
+	  
+	  
+	  
+	  
+    </table></body>
+</html>
