changed Abut us to AboutUs

--- a/assignment-2a/website-content/webpages-list.html
+++ b/assignment-2a/website-content/webpages-list.html
@@ -16,7 +16,7 @@
       </tr>
 	  
 	  <tr>
-        <td>About us.html</td>
+        <td>AboutUs.html</td>
         <td>The School</td>
         <td>Page containing information about the school</td>
         <td>Contact us-button, which opens a dialogue containing a mail-address(mailto:) and phone number for registration</td>
@@ -98,10 +98,6 @@
         <td>The Imprint and Privacy-Policy for the page</td>
         <td>/</td>
       </tr>
-	  
-	  
-	  
-	  
 	  
     </table></body>
 </html>
