--- a/assignment-2a/website-content/webpages-list.html
+++ b/assignment-2a/website-content/webpages-list.html
@@ -12,33 +12,27 @@
         <td>Home.html</td>
         <td>Salsa Swings Dance Studio</td>
         <td>landing page of the website</td>
-        <td>Overview of the studio(s), links to the detail pages</td>
+        <td>Overview of the studio, links to the detail pages</td>
       </tr>
 	  
 	  <tr>
         <td>AboutUs.html</td>
-        <td>The School</td>
-        <td>Page containing information about the school</td>
-        <td>Contact us-button, which opens a dialogue containing a mail-address(mailto:) and phone number for registration</td>
+        <td>Our Vision</td>
+        <td>Page containing information about the vision and Dance Teachers</td>
+        <td>Photos of Dance Teachers with name and the course name they are giving</td>
       </tr>
 	  
 	  <tr>
-        <td>Pricing.html</td>
-        <td>Pricing</td>
-        <td>Overview of the pricing for participation in courses</td>
-		<td>Contact us-button, which opens a dialogue containing a mail-address(mailto:) and phone number for registration</td>
+        <td>Prices.html</td>
+        <td>Prices</td>
+        <td>Overview the the prices for the different courses</td>
+	<td>Name and price of the course version</td>
       </tr>
-	  
-	  <tr>
-        <td>Team.html</td>
-        <td>Our Team</td>
-        <td>A list with short profile of every dance-teacher (including name, dance-types, trophys) </td>
-        <td>Contact us-button, which opens a dialogue containing a mail-address(mailto:) and phone number for registration</td>
-      </tr>
+	
 	    
 	  <tr>
-        <td>CourseOverview.html</td>
-        <td>Dance-Courses</td>
+        <td>Courses.html</td>
+        <td>Dance Courses</td>
         <td>Shows all the offered courses and links to them</td>
         <td>Linking to the different courses</td>
       </tr>
@@ -79,6 +73,14 @@
       </tr>
 	  
 	  <tr>
+        <td>Schedule.html</td>
+        <td>Schedule</td>
+        <td>A pdf showing the weekly given courses</td>
+        <td>/</td>
+      </tr>
+	  
+	  
+	  <tr>
         <td>Gallery.html</td>
         <td>Gallery</td>
         <td>A gallery page containing images of dancers from the school</td>
@@ -93,7 +95,29 @@
       </tr>
 	  
 	  <tr>
-        <td>Imprint.html</td>
+        <td>News.html</td>
+        <td>News</td>
+        <td>A page displaying some news of the Dance Studio e.g. competitions, new courses, new teachers</td>
+        <td>News are added by the administrator, no form</td>
+      </tr>
+	  
+	  <tr>
+        <td>FAQs.html</td>
+        <td>Frequently Asked Questions</td>
+        <td>Some FAQs students could have</td>
+        <td>FAQs are added by the administrator, no form</td>
+      </tr>
+	  
+	  <tr>
+        <td>Contact.html</td>
+        <td>Contact</td>
+        <td>Address and Contact</td>
+        <td>/</td>
+      </tr>
+	  
+	  
+	  <tr>
+        <td>Impressum.html</td>
         <td>Imprint & Privacy</td>
         <td>The Imprint and Privacy-Policy for the page</td>
         <td>/</td>
