--- a/assignment-2a/website-content/webpages-list.html
+++ b/assignment-2a/website-content/webpages-list.html
@@ -15,111 +15,102 @@
         <td>Overview of the studio, links to the detail pages</td>
       </tr>
 	  
-	  <tr>
+      <tr>
         <td>AboutUs.html</td>
         <td>Our Vision</td>
         <td>Page containing information about the vision and Dance Teachers</td>
         <td>Photos of Dance Teachers with name and the course name they are giving</td>
       </tr>
 	  
-	  <tr>
+      <tr>
         <td>Prices.html</td>
         <td>Prices</td>
-        <td>Overview the the prices for the different courses</td>
-	<td>Name and price of the course version</td>
+        <td>Overview the the prices for the different membership-models</td>
+	<td>/</td>
       </tr>
 	
 	    
-	  <tr>
+      <tr>
         <td>Courses.html</td>
         <td>Dance Courses</td>
         <td>Shows all the offered courses and links to them</td>
         <td>Linking to the different courses</td>
       </tr>
 	  
-	  <tr>
+      <tr>
         <td>Salsa.html</td>
         <td>Salsa</td>
         <td>Detailpage for Salsa-Course. Contains Time, Teacher, Information and requirenments for the student</td>
-        <td>Contact us-button, which opens a dialogue containing a mail-address(mailto:) and phone number for registration / Videoplayer containing Videos of the dance</td>
+        <td>Course-Schedule gets read out of the UML File for Category Salsa / Videoplayer containing YouTube-Videos of the dance and Music</td>
       </tr>
 	  
-	  <tr>
+      <tr>
         <td>IrishDance.html</td>
         <td>Irish Dance</td>
         <td>Detailpage for IrishDance-Course. Contains Time, Teacher, Information and requirenments for the student</td>
-        <td>Contact us-button, which opens a dialogue containing a mail-address(mailto:) and phone number for registration / Videoplayer containing Videos of the dance</td>
+        <td>Course-Schedule gets read out of the UML File for Category Irish Dance / Videoplayer containing YouTube-Videos of the dance and Music</td>
       </tr>
 	  
-	  <tr>
+      <tr>
         <td>HipHop.html</td>
         <td>Hip Hop</td>
         <td>Detailpage for Hip Hop-Course. Contains Time, Teacher, Information and requirenments for the student</td>
-        <td>Contact us-button, which opens a dialogue containing a mail-address(mailto:) and phone number for registration / Videoplayer containing Videos of the dance</td>
+        <td>Course-Schedule gets read out of the UML File for Category Hip Hop / Videoplayer containing YouTube-Videos of the dance and Music</td>
       </tr>
 	  
-	  <tr>
+      <tr>
         <td>Swing.html</td>
         <td>Swing</td>
         <td>Detailpage for Swing-Course. Contains Time, Teacher, Information and requirenments for the student</td>
-        <td>Contact us-button, which opens a dialogue containing a mail-address(mailto:) and phone number for registration / Videoplayer containing Videos of the dance</td>
+        <td>Course-Schedule gets read out of the UML File for Category Swing / Videoplayer containing YouTube-Videos of the dance and Music</td>
       </tr>
 	  
-	  <tr>
+      <tr>
         <td>Charleston.html</td>
         <td>Charleston</td>
         <td>Detailpage for Charleston-Course. Contains Time, Teacher, Information and requirenments for the student</td>
-        <td>Contact us-button, which opens a dialogue containing a mail-address(mailto:) and phone number for registration / Videoplayer containing Videos of the dance</td>
+        <td>Course-Schedule gets read out of the UML File for Category Charleston / Videoplayer containing YouTube-Videos of the dance and Music</td>
       </tr>
 	  
-	  <tr>
+      <tr>
         <td>Schedule.html</td>
         <td>Schedule</td>
-        <td>A pdf showing the weekly given courses</td>
-        <td>/</td>
+        <td>A table showing the schedule for the courses</td>
+        <td>The content of the table gets read out from the XML-File (all entries of file)</td>
       </tr>
 	  
-	  
-	  <tr>
-        <td>Gallery.html</td>
-        <td>Gallery</td>
-        <td>A gallery page containing images of dancers from the school</td>
-        <td>/</td>
-      </tr>
-	  
-	  <tr>
+      <tr>
         <td>Reviews.html</td>
         <td>Reviews</td>
         <td>A page displaying the reviews of the costumers</td>
         <td>Reviews are added by the administrator, no form</td>
       </tr>
 	  
-	  <tr>
+      <tr>
         <td>News.html</td>
         <td>News</td>
         <td>A page displaying some news of the Dance Studio e.g. competitions, new courses, new teachers</td>
         <td>News are added by the administrator, no form</td>
       </tr>
 	  
-	  <tr>
+      <tr>
         <td>FAQs.html</td>
         <td>Frequently Asked Questions</td>
         <td>Some FAQs students could have</td>
-        <td>FAQs are added by the administrator, no form</td>
+        <td>FAQs are added by the administrator, no form. Make Answers Collapsable so only the questions are displayed when not clicked</td>
       </tr>
 	  
-	  <tr>
+      <tr>
         <td>Contact.html</td>
         <td>Contact</td>
         <td>Address and Contact</td>
-        <td>/</td>
+        <td>mailto: and tel: links for phone number and email adress</td>
       </tr>
-	  
-	  
-	  <tr>
-        <td>Impressum.html</td>
+	    
+      <tr>
+        <td>Imprint.html</td>
         <td>Imprint & Privacy</td>
-        <td>The Imprint and Privacy-Policy for the page</td>
+        <td>The Imprint of the Page</td>
         <td>/</td>
       </tr>
 	  
