--- a/assignment-2b-group6/about_us.html
+++ b/assignment-2b-group6/about_us.html
@@ -64,19 +64,19 @@
 	  <div class="teacher_card_container">
 	  <div class="teacher_card">
       <img src="images/teachers.png" alt="" />
-	  <p> Chris Salsa </p>
+	  <p> Chris (Salsa) </p>
 	  </div>
 	  <div class="teacher_card">
       <img src="images/teachers.png" alt="" />
-	  	  <p> Tamara Irish Dance </p>
+	  	  <p> Tamara (Irish Dance) </p>
 	  </div>
 	  <div class="teacher_card">
       <img src="images/teachers.png" alt="" />
-	  	  <p> Detlef Hiphop </p>
+	  	  <p> Detlef (Hiphop) </p>
 		</div>
 	  <div class="teacher_card">
       <img src="images/teachers.png" alt="" />
-	  	  <p> Tamara Charleston </p>
+	  	  <p> Tamara (Charleston) </p>
 	  </div>
 	 </div>
 	 </div>
