--- a/assignment-2b-group6/index.html
+++ b/assignment-2b-group6/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <link href="css/general.css" rel="stylesheet" />
-    <link href="css/salsa.css" rel="stylesheet" />
+    <link href="css/index.css" rel="stylesheet" />
 
-    <title>Swing</title>
+    <title>Home</title>
   </head>
   <body>
     <header>
@@ -37,75 +36,43 @@
         </nav>
       </div>
     </header>
-
-    <!-- image -->
-
     <div class="content">
+      <!-- company name -->
+      <h1>Salsa Swings Dance School</h1>
+
       <div class="sub_content">
+        <!-- image -->
         <div class="image">
           <img
-            src="images/swing_dance.jpg"
-            alt="swing_dance"
+            src="images/home_page.jpg"
+            alt="homepage_image"
             height="341"
             width="512"
           />
         </div>
 
+        <!-- title -->
         <div class="text">
-          <h1>Swing</h1>
           <p>
-            Swing dancing is a fun kind of social dancing where partners are
-            frequently lifted, spun, and flipped by the dancer. Swing dancing is
-            a popularity among social dancers of all ages since it is regarded
-            as both trendy and fashionable. <br /><br />
-
-            Finding swing dancers is simple—just search for the couple who is
-            having the most fun and is grinning widely. There is a lot of
-            swinging, flipping, and flinging of dancers during swing dance. It
-            is a well-liked dance for a packed dance floor because it is a
-            non-progressive dancing style and is primarily done in one location.
-            Swing is a swift, brisk dance. Instead of holding hands around the
-            waist or on the shoulders like ballroom dancers do, couples hold
-            hands.
+            Since 2022, Salsa Swings Dance Studio has operated successfully as a
+            family-oriented dance school. We are one of the biggest and most
+            successful dance schools in Europe, with over 400 students of all
+            ages and skill levels enrolled in our cutting-edge studio. At Salsa
+            Swings Dance Studio, anything is possible, from a student who wants
+            to join for social reasons to another who wants to become the next
+            professional dancer.
+            <br /><br />
+            Everyone is welcome here, and we provide classes for all skill
+            levels. Additionally, why not take your first class absolutely FREE
+            dance session and see for yourself? We are confident that you won't
+            be let down.
           </p>
-        </div>
-      </div>
-      <!-- swing schedule -->
-      <div class="sub_content">
-        <div class="text">
-          <h2>Schedule</h2>
-          <table>
-            <tr>
-              <th>Day</th>
-              <th>Time</th>
-              <th>Trainer</th>
-              <th>Level</th>
-            </tr>
-            <tr>
-              <td>Friday</td>
-              <td>6pm</td>
-              <td>Chris</td>
-              <td>Beginner</td>
-            </tr>
-            <tr>
-              <td>Friday</td>
-              <td>8pm</td>
-              <td>Chris</td>
-              <td>Advanced</td>
-            </tr>
-            <tr>
-              <td>Monday</td>
-              <td>7pm</td>
-              <td>Detlef</td>
-              <td>Competitive</td>
-            </tr>
-          </table>
+
+          <br />
         </div>
       </div>
     </div>
-
     <!-- footer -->
-
     <div class="footer">
       <footer>
         <form action="schedule.html" method="get">
