--- a/assignment-2b-group6/charleston.html
+++ b/assignment-2b-group6/charleston.html
@@ -4,99 +4,127 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-      }
-      li {
-        float: left;
-      }
-      li a {
-        display: block;
-        padding: 8px;
-        background-color: #dddddd;
-      }
-    </style>
+
+    <link href="css/general.css" rel="stylesheet" />
+    <link href="css/salsa.css" rel="stylesheet" />
+
     <title>Charleston</title>
   </head>
   <body>
     <header>
-      <img src="images/logo.svg" alt="logo" height="150" width="150" />
-      <nav>
-        <ul>
-          <li><a href="home.html">Home</a></li>
-          <li><a href="about_us.html">About Us</a></li>
-          <li><a href="courses.html">Courses</a></li>
-          <li><a href="reviews.html">Reviews</a></li>
-          <li><a href="news.html">News</a></li>
-          <li><a href="faq.html">FAQs</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
+      <div class="header">
+        <div>
+          <a href="index.html">
+            <img src="images/logo.svg" alt="logo" height="150" width="150" />
+          </a>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><div class="vl"></div></li>
+            <li><a href="about_us.html">About Us</a></li>
+            <li><div class="vl"></div></li>
+            <li><a href="courses.html">Courses</a></li>
+            <li><div class="vl"></div></li>
+            <li><a href="reviews.html">Reviews</a></li>
+            <li><div class="vl"></div></li>
+            <li><a href="news.html">News</a></li>
+            <li><div class="vl"></div></li>
+            <li><a href="faq.html">FAQs</a></li>
+            <li><div class="vl"></div></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <!-- image -->
-    <img src="images/charleston_dance.jpg" alt="" />
 
-    <h1>Charleston</h1>
-    <p>
-      Charleston, a social jazz dance that saw many revivals in the 1920s, was
-      very popular. It was done solo, with a partner, or as part of a group, and
-      was distinguished by its toes-in, heels-out twisting steps. It was
-      initially a black folk dance popular throughout the American South,
-      notably in Charleston, South Carolina, and was mentioned as early as 1903.
-      Its movements can be analyzed to see how closely it resembles specific
-      dances from Trinidad, Nigeria, and Ghana. Early versions of the dance were
-      largely abandoned, and it was performed to intricate beats produced by
-      handclaps and foot stamping.
-    </p>
+    <div class="content">
+      <div class="sub_content">
+        <div class="image">
+          <img
+            src="images/charleston_dance.jpg"
+            alt="charleston_dance"
+            height="341"
+            width="512"
+          />
+        </div>
 
-    <!-- schedule table -->
-
-    <h2>Schedule</h2>
-    <table>
-      <tr>
-        <th>Day</th>
-        <th>Time</th>
-        <th>Trainer</th>
-        <th>Level</th>
-      </tr>
-      <tr>
-        <td>Saturday</td>
-        <td>3pm</td>
-        <td>Tamara</td>
-        <td>Beginner</td>
-      </tr>
-      <tr>
-        <td>Saturdayday</td>
-        <td>7pm</td>
-        <td>Tamara</td>
-        <td>Advanced</td>
-      </tr>
-    </table>
+        <div class="text">
+          <h1>Charleston</h1>
+          <p>
+            Charleston, a social jazz dance that saw many revivals in the 1920s,
+            was very popular. It was done solo, with a partner, or as part of a
+            group, and was distinguished by its toes-in, heels-out twisting
+            steps. It was initially a black folk dance popular throughout the
+            American South, notably in Charleston, South Carolina, and was
+            mentioned as early as 1903. Its movements can be analyzed to see how
+            closely it resembles specific dances from Trinidad, Nigeria, and
+            Ghana. Early versions of the dance were largely abandoned, and it
+            was performed to intricate beats produced by handclaps and foot
+            stamping.
+          </p>
+        </div>
+      </div>
+      <!-- schedule table -->
+      <div class="sub_content">
+        <div class="text">
+          <h2>Schedule</h2>
+          <table>
+            <tr>
+              <th>Day</th>
+              <th>Time</th>
+              <th>Trainer</th>
+              <th>Level</th>
+            </tr>
+            <tr>
+              <td>Saturday</td>
+              <td>3pm</td>
+              <td>Tamara</td>
+              <td>Beginner</td>
+            </tr>
+            <tr>
+              <td>Saturdayday</td>
+              <td>7pm</td>
+              <td>Tamara</td>
+              <td>Advanced</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
 
     <!-- footer -->
 
-    <footer>
-      <form style="display: inline" action="schedule.html" method="get">
-        <button>Schedule</button>
-      </form>
-      <form style="display: inline" action="courses.html" method="get">
-        <button>Courses</button>
-      </form>
-      <form style="display: inline" action="about_us.html" method="get">
-        <button>About Us</button>
-      </form>
+    <div class="footer">
+      <footer>
+        <form action="schedule.html" method="get">
+          <div id="formbox">
+            <button>Schedule</button>
+          </div>
+        </form>
+        <form action="courses.html" method="get">
+          <div id="formbox">
+            <button>Courses</button>
+          </div>
+        </form>
+        <form action="about_us.html" method="get">
+          <div id="formbox">
+            <button>About Us</button>
+          </div>
+        </form>
 
-      <img src="images/tw.png" alt="twitter" />
-      <img src="images/ig.png" alt="instagram" />
-      <img src="images/fb.png" alt="facebook" />
-      <ul>
-        <li><a href="imprint.html">Imprint</a></li>
-        <li><a href="credits.html">Credit</a></li>
-      </ul>
-    </footer>
+        <div class="icons">
+          <img src="images/tw.png" alt="twitter" />
+          <img src="images/ig.png" alt="instagram" />
+          <img src="images/fb.png" alt="facebook" />
+          <ul>
+            <li><a href="imprint.html">Imprint</a></li>
+            <li><div class="vl"></div></li>
+            <li><a href="credits.html">Credit</a></li>
+          </ul>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
