--- a/assignment-2b-group6/contact.html
+++ b/assignment-2b-group6/contact.html
@@ -4,83 +4,105 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-      }
-      li {
-        float: left;
-      }
-      li a {
-        display: block;
-        padding: 8px;
-        background-color: #dddddd;
-      }
-    </style>
+    <link href="css/general.css" rel="stylesheet" />
+    <link href="css/contact.css" rel="stylesheet" />
+
     <title>Contact</title>
   </head>
   <body>
     <header>
-      <nav>
-        <img src="images/logo.svg" alt="logo" height="150" width="150" />
-        <ul>
-          <li><a href="home.html">Home</a></li>
-          <li><a href="about_us.html">About Us</a></li>
-          <li><a href="courses.html">Courses</a></li>
-          <li><a href="reviews.html">Reviews</a></li>
-          <li><a href="news.html">News</a></li>
-          <li><a href="faq.html">FAQs</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
+      <div class="header">
+        <div>
+          <a href="index.html">
+            <img src="images/logo.svg" alt="logo" height="150" width="150" />
+          </a>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><div class="vl"></div></li>
+            <li><a href="about_us.html">About Us</a></li>
+            <li><div class="vl"></div></li>
+            <li><a href="courses.html">Courses</a></li>
+            <li><div class="vl"></div></li>
+            <li><a href="reviews.html">Reviews</a></li>
+            <li><div class="vl"></div></li>
+            <li><a href="news.html">News</a></li>
+            <li><div class="vl"></div></li>
+            <li><a href="faq.html">FAQs</a></li>
+            <li><div class="vl"></div></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
-    <!-- location image -->
-    <img src="images/map.jpg" alt="location_image" />
+    <div class="content">
+      <!-- location image -->
 
-    <!-- heading -->
-    <h1>Contact Us</h1>
+      <div class="image">
+        <img src="images/map.jpg" alt="location_image" />
+      </div>
 
-    <!-- address, email, telephone, social media links -->
+      <div class="contact_info">
+        <!-- heading -->
+        <h1>Contact Us</h1>
 
-    <address>
-      Salsa Swings Dance School <br />
-      Karl-Marx-Straße 69 <br />
-      1010 Vienna, Austria <br />
-      <br />
+        <!-- address, email, telephone, social media links -->
 
-      📧 info@salsa-swings.at <br />
-      📞 +41 148 2830 1191
-    </address>
-
-    <a href="twitter.com/salsa_swings_dance_studio">Twitter</a>
-    <a href="instagram.com/salsa_swings_dance_studio">Instagram</a>
-    <a href="fb.com/salsa_swings_dance_studio">Facebook</a>
-    <a href="tiktok.com/@salsa_swings_dance_studio">Tiktok</a>
-    <a href="youtube.com/c/salsa_swings_dance_studio">Youtube</a>
-
+        <address>
+          Salsa Swings Dance School <br />
+          Karl-Marx-Straße 69 <br />
+          1010 Vienna, Austria <br />
+          <br />
+          <div class="colored_address">
+            📧 info@salsa-swings.at <br />
+            <br />
+            📞 +41 148 2830 1191
+          </div>
+        </address>
+        <div class="links">
+          <a href="twitter.com/salsa_swings_dance_studio">Twitter</a>
+          <div class="vl2"></div>
+          <a href="instagram.com/salsa_swings_dance_studio">Instagram</a>
+          <div class="vl2"></div>
+          <a href="fb.com/salsa_swings_dance_studio">Facebook</a>
+          <div class="vl2"></div>
+          <a href="tiktok.com/@salsa_swings_dance_studio">Tiktok</a>
+          <div class="vl2"></div>
+          <a href="youtube.com/c/salsa_swings_dance_studio">Youtube</a>
+        </div>
+      </div>
+    </div>
     <!-- footer -->
+    <div class="footer">
+      <footer>
+        <form action="schedule.html" method="get">
+          <div id="formbox">
+            <button>Schedule</button>
+          </div>
+        </form>
+        <form action="courses.html" method="get">
+          <div id="formbox">
+            <button>Courses</button>
+          </div>
+        </form>
+        <form action="about_us.html" method="get">
+          <div id="formbox">
+            <button>About Us</button>
+          </div>
+        </form>
 
-    <footer>
-      <form style="display: inline" action="schedule.html" method="get">
-        <button>Schedule</button>
-      </form>
-      <form style="display: inline" action="courses.html" method="get">
-        <button>Courses</button>
-      </form>
-      <form style="display: inline" action="about_us.html" method="get">
-        <button>About Us</button>
-      </form>
-
-      <img src="images/tw.png" alt="twitter" />
-      <img src="images/ig.png" alt="instagram" />
-      <img src="images/fb.png" alt="facebook" />
-      <ul>
-        <li><a href="imprint.html">Imprint</a></li>
-        <li><a href="credits.html">Credit</a></li>
-      </ul>
-    </footer>
+        <div class="icons">
+          <img src="images/tw.png" alt="twitter" />
+          <img src="images/ig.png" alt="instagram" />
+          <img src="images/fb.png" alt="facebook" />
+          <ul>
+            <li><a href="imprint.html">Imprint</a></li>
+            <li><div class="vl"></div></li>
+            <li><a href="credits.html">Credit</a></li>
+          </ul>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
