--- a/assignment-2b-group6/news.html
+++ b/assignment-2b-group6/news.html
@@ -4,101 +4,122 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-      }
-      li {
-        float: left;
-      }
-      li a {
-        display: block;
-        padding: 8px;
-        background-color: #dddddd;
-      }
-    </style>
+    <link href="css/general.css" rel="stylesheet" />
+    <link href="css/news.css" rel="stylesheet" />
+
     <title>News</title>
   </head>
   <body>
     <header>
-      <img src="images/logo.svg" alt="logo" height="150" width="150" />
-      <nav>
-        <ul>
-          <li><a href="home.html">Home</a></li>
-          <li><a href="about_us.html">About Us</a></li>
-          <li><a href="courses.html">Courses</a></li>
-          <li><a href="reviews.html">Reviews</a></li>
-          <li><a href="news.html">News</a></li>
-          <li><a href="faq.html">FAQs</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
+      <div class="header">
+        <div>
+          <a href="index.html">
+            <img src="images/logo.svg" alt="logo" height="150" width="150" />
+          </a>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><div class="vl"></div></li>
+            <li><a href="about_us.html">About Us</a></li>
+            <li><div class="vl"></div></li>
+            <li><a href="courses.html">Courses</a></li>
+            <li><div class="vl"></div></li>
+            <li><a href="reviews.html">Reviews</a></li>
+            <li><div class="vl"></div></li>
+            <li><a href="news.html">News</a></li>
+            <li><div class="vl"></div></li>
+            <li><a href="faq.html">FAQs</a></li>
+            <li><div class="vl"></div></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
+    <div class="content">
+      <!-- heading -->
+      <h1>News</h1>
+      <div class="sub_content">
+        <!-- 1st news headline -->
+        <div class="image">
+          <img src="images/news_1.jpg" alt="" height="341" width="512" />
+        </div>
+        <div class="text">
+          <h2>The New Dance Moves of Rihanna (EXPLORED)</h2>
+          <p>
+            Yesterday, the singer posted a brand-new video to Instagram in which
+            she can be seen dancing while wearing a gray oversized hoodie and
+            matching pants. She accessorizes the ensemble with a silver chain
+            necklace, wears her hair down in a silky blowout, and opts for a
+            bronze beauty look.
+            <br />
+            A musical remix of her speaking is playing as she dances around in
+            the laid-back outfit by Savage x Fenty. "I hate you if your hands
+            are on a phone texting. If you're taking photos of me, I just want
+            to see you on your phone "she claims.
+          </p>
+        </div>
+      </div>
+      <hr />
 
-    <!-- heading -->
-    <h1>News</h1>
-
-    <!-- 1st news headline -->
-    <img src="images/news_1.jpg" alt="" />
-    <h2>The New Dance Moves of Rihanna (EXPLORED)</h2>
-    <p>
-      Yesterday, the singer posted a brand-new video to Instagram in which she
-      can be seen dancing while wearing a gray oversized hoodie and matching
-      pants. She accessorizes the ensemble with a silver chain necklace, wears
-      her hair down in a silky blowout, and opts for a bronze beauty look.
-      <br />
-      A musical remix of her speaking is playing as she dances around in the
-      laid-back outfit by Savage x Fenty. "I hate you if your hands are on a
-      phone texting. If you're taking photos of me, I just want to see you on
-      your phone "she claims.
-    </p>
-
-    <hr />
-
-    <!-- 2nd news headline -->
-    <img src="images/news_2.jpg" alt="" />
-    <h2>
-      The 10-year anniversary gala for L.A. Dance Project is brought to life by
-      dance
-    </h2>
-    <p>
-      On October 29, L.A. hosted a banquet to celebrate their tenth anniversary
-      at the Pritzker home in Beverly Hills. Dance Project honored a decade of
-      dance in front of the audience that sustained its craft. Dancers strolled
-      through the estate, greeting guests with outstretched arms before
-      launching into a routine that kissed the ground in every area of the
-      property. The audience was enthralled by the show both inside and outside
-      the house as they watched, frequently giggling along with the dancers.
-      <br />
-      The group just debuted "Be Here Now," a new piece choreographed by
-      Benjamin Millepied, co-artistic director and co-founder of LADP, alongside
-      Gisèle Vienne's "Crowd" on Wednesday and Thursday at LADP's downtown Los
-      Angeles location.
-    </p>
-
+      <div class="sub_content">
+        <!-- 2nd news headline -->
+        <div class="image">
+          <img src="images/news_2.jpg" alt="" height="341" width="512" />
+        </div>
+        <div class="text">
+          <h2>
+            The 10-year anniversary gala for L.A. Dance Project is brought to
+            life by dance
+          </h2>
+          <p>
+            On October 29, L.A. hosted a banquet to celebrate their tenth
+            anniversary at the Pritzker home in Beverly Hills. Dance Project
+            honored a decade of dance in front of the audience that sustained
+            its craft. Dancers strolled through the estate, greeting guests with
+            outstretched arms before launching into a routine that kissed the
+            ground in every area of the property. The audience was enthralled by
+            the show both inside and outside the house as they watched,
+            frequently giggling along with the dancers.
+            <br />
+            The group just debuted "Be Here Now," a new piece choreographed by
+            Benjamin Millepied, co-artistic director and co-founder of LADP,
+            alongside Gisèle Vienne's "Crowd" on Wednesday and Thursday at
+            LADP's downtown Los Angeles location.
+          </p>
+        </div>
+      </div>
+    </div>
     <!-- footer -->
+    <div class="footer">
+      <footer>
+        <form action="schedule.html" method="get">
+          <div id="formbox">
+            <button>Schedule</button>
+          </div>
+        </form>
+        <form action="courses.html" method="get">
+          <div id="formbox">
+            <button>Courses</button>
+          </div>
+        </form>
+        <form action="about_us.html" method="get">
+          <div id="formbox">
+            <button>About Us</button>
+          </div>
+        </form>
 
-    <footer>
-      <form style="display: inline" action="schedule.html" method="get">
-        <button>Schedule</button>
-      </form>
-      <form style="display: inline" action="courses.html" method="get">
-        <button>Courses</button>
-      </form>
-      <form style="display: inline" action="about_us.html" method="get">
-        <button>About Us</button>
-      </form>
-
-      <img src="images/tw.png" alt="twitter" />
-      <img src="images/ig.png" alt="instagram" />
-      <img src="images/fb.png" alt="facebook" />
-      <ul>
-        <li><a href="imprint.html">Imprint</a></li>
-        <li><a href="credits.html">Credit</a></li>
-      </ul>
-    </footer>
+        <div class="icons">
+          <img src="images/tw.png" alt="twitter" />
+          <img src="images/ig.png" alt="instagram" />
+          <img src="images/fb.png" alt="facebook" />
+          <ul>
+            <li><a href="imprint.html">Imprint</a></li>
+            <li><div class="vl"></div></li>
+            <li><a href="credits.html">Credit</a></li>
+          </ul>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
