--- a/assignment-2b-group6/salsa.html
+++ b/assignment-2b-group6/salsa.html
@@ -4,98 +4,118 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-      }
-      li {
-        float: left;
-      }
-      li a {
-        display: block;
-        padding: 8px;
-        background-color: #dddddd;
-      }
-    </style>
+	  <link href="css/general.css" rel="stylesheet">
+	  <link href="css/salsa.css" rel="stylesheet">
+	
     <title>Salsa</title>
   </head>
   <body>
     <header>
-      <img src="images/logo.svg" alt="logo" height="150" width="150" />
-      <nav>
-        <ul>
-          <li><a href="home.html">Home</a></li>
-          <li><a href="about_us.html">About Us</a></li>
-          <li><a href="courses.html">Courses</a></li>
-          <li><a href="reviews.html">Reviews</a></li>
-          <li><a href="news.html">News</a></li>
-          <li><a href="faq.html">FAQs</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
+      <div class="header">
+        <div>
+        <a href="index.html">
+          <img src="images/logo.svg" alt="logo" height="150" width="150" />
+        </a>
+      </div>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a> </li>
+            <li><div class="vl"></div></li> 
+            <li><a href="about_us.html">About Us</a></li>
+            <li><div class="vl"></div></li> 
+            <li><a href="courses.html">Courses</a></li>
+            <li><div class="vl"></div></li> 
+            <li><a href="reviews.html">Reviews</a></li>
+            <li><div class="vl"></div></li> 
+            <li><a href="news.html">News</a></li>
+            <li><div class="vl"></div></li> 
+            <li><a href="faq.html">FAQs</a></li>
+            <li><div class="vl"></div></li> 
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
-
-    <!-- image -->
-    <img src="images/salsa_dance.jpg" alt="" />
-
-    <h1>Salsa</h1>
-    <p>
-      Salsa is a sensual, upbeat, and enjoyable partner dance. It is a fairly
-      social dance, unlike several partner dances where you must have a regular
-      partner. The practice of salseros dancing with strangers is actually
-      rather frequent. That's a fun aspect of salsa dancing. Salsa is known for
-      being friendly and has gained enormous popularity all around the world.
-      Salsa clubs are now widely available anywhere you travel in the entire
-      planet.
-    </p>
-
-    <!-- salsa schedule -->
-
-    <h2>Schedule</h2>
-    <table>
-      <tr>
-        <th>Day</th>
-        <th>Time</th>
-        <th>Trainer</th>
-        <th>Level</th>
-      </tr>
-      <tr>
-        <td>Tuesday</td>
-        <td>7pm</td>
-        <td>Marc</td>
-        <td>Beginner</td>
-      </tr>
-      <tr>
-        <td>Wednesday</td>
-        <td>8pm</td>
-        <td>Chris</td>
-        <td>Advanced</td>
-      </tr>
-    </table>
+	
+  <body>
+      <div class="content">
+	      <div class="sub_content">
+          <!-- image -->
+	        <div class="image">
+            <img src="images/salsa_dance.jpg" alt="salsa_dance" height="341" width="512" />
+          </div>
+          
+	        <div class="text">
+            <h1>Salsa</h1>
+            <p>
+                Salsa is a sensual, upbeat, and enjoyable partner dance. It is a fairly
+                social dance, unlike several partner dances where you must have a regular
+                partner. The practice of salseros dancing with strangers is actually
+                rather frequent. That's a fun aspect of salsa dancing. Salsa is known for
+                being friendly and has gained enormous popularity all around the world.
+                Salsa clubs are now widely available anywhere you travel in the entire
+                planet.
+            </p>
+	        </div>
+	      </div>
+       <!-- salsa schedule -->
+	        <div class="sub_content">
+	          <div class="text">
+              <h2>Schedule</h2>
+                <table>
+                  <tr>
+                    <th>Day</th>
+                    <th>Time</th>
+                    <th>Trainer</th>
+                    <th>Level</th>
+                  </tr>
+                  <tr>
+                    <td>Tuesday</td>
+                    <td>7pm</td>
+                    <td>Marc</td>
+                    <td>Beginner</td>
+                  </tr>
+                  <tr>
+                    <td>Wednesday</td>
+                    <td>8pm</td>
+                    <td>Chris</td>
+                    <td>Advanced</td>
+                  </tr>
+                </table>
+	          </div>
+	        </div>
+      </div>
 
     <!-- footer -->
+    <div class="footer">
+      <footer>    
+          <form action="schedule.html" method="get">
+            <div id="formbox">
+              <button>Schedule</button>
+            </div>
+          </form>
+          <form action="courses.html" method="get">
+            <div id="formbox">
+              <button>Courses</button>
+            </div>
+          </form>
+          <form action="about_us.html" method="get">
+            <div id="formbox">
+              <button>About Us</button>
+            </div>
+          </form>
 
-    <footer>
-      <form style="display: inline" action="schedule.html" method="get">
-        <button>Schedule</button>
-      </form>
-      <form style="display: inline" action="courses.html" method="get">
-        <button>Courses</button>
-      </form>
-      <form style="display: inline" action="about_us.html" method="get">
-        <button>About Us</button>
-      </form>
-
-      <img src="images/tw.png" alt="twitter" />
-      <img src="images/ig.png" alt="instagram" />
-      <img src="images/fb.png" alt="facebook" />
-      <ul>
-        <li><a href="imprint.html">Imprint</a></li>
-        <li><a href="credits.html">Credit</a></li>
-      </ul>
-    </footer>
+        <div class="icons">
+          <img src="images/tw.png" alt="twitter" />
+          <img src="images/ig.png" alt="instagram" />
+          <img src="images/fb.png" alt="facebook" />
+          <ul>
+            <li><a href="imprint.html">Imprint</a></li>
+            <li><div class="vl"></div></li> 
+            <li><a href="credits.html">Credit</a></li>
+          </ul>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
